--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link rel="stylesheet" href="/assets/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Roboto:300,400,500,700,400Italic" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Roboto:300,400,500,700,400Italic" rel="stylesheet"> -->
+  <link href="/assets/fonts/material-icons.css" rel="stylesheet">
+  <link href="/assets/fonts/roboto-300-400-500-700-400italic.css" rel="stylesheet">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!-- See ananlytics.service.ts for the setting of events -->
+  <!-- See analytics.service.ts for the setting of events -->
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
