Fix loading logo

--- a/src/index.html
+++ b/src/index.html
@@ -30,13 +30,13 @@
     .loading-page{
       height: 100vh;
       margin:0 auto;
-      margin-top:25%;
+      margin-top:25vh;
       width: 50%;
       max-width: 800px;
       text-align: center;
       color: white;
       text-shadow: 0px 2px 20px #000;
-      size: 20pt;
+      font-size: 30pt;
     }
     .loading-page > img{
       width: 100%;
