--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
       margin-top:25vh;
       width: 50%;
       max-width: 800px;
+      max-width: 25vh;
       text-align: center;
       color: white;
       text-shadow: 0px 2px 20px #000;
